--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pytankbattle"
-version = "0.1.0"
+dynamic = ["version"]
 authors = [
     { name="Grillo del Mal", email="grillo@delmal.cl" },
 ]
@@ -28,3 +28,10 @@ pytankbattle = "pytankbattle:main"
 
 [tool.setuptools.package-data]
 "pytankbattle.assets" = ["*.png"]
+
+[build-system]
+requires = [ "setuptools>=41", "wheel", "setuptools-git-versioning<2", ]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools-git-versioning]
+enabled = true
