--- a/.github/workflows/build_n_release.yml
+++ b/.github/workflows/build_n_release.yml
@@ -11,9 +11,23 @@ permissions:
   contents: write
 
 jobs:
-  windows-build:
-    name: Windows Build
-    runs-on: windows-latest
+  build:
+    name: Release Build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: 'windows-latest'
+            result_name: pytankbattle-windows-x86_64
+            result_path: src/build/exe.win-amd64-3.12/*
+          - os: 'ubuntu-latest'
+            result_name: pytankbattle-linux-x86_64
+            result_path: src/build/exe.linux-x86_64-3.12/*
+          - os: 'macos-latest'
+            result_name: pytankbattle-macosx-x86_64
+            result_path: src/build/exe.macosx-10.9-universal2-3.12/*
+
     steps:
     - uses: actions/checkout@v4
       with:
@@ -30,70 +44,12 @@ jobs:
       uses: thedoctor0/zip-release@main
       with:
         type: 'zip'
-        filename: 'pytankbattle-windows-x86_64.zip'
+        filename: ${{ matrix.result_name }}.zip
         directory: 'out/'
-        path: 'src/build/exe.win-amd64-3.12/*'
+        path: ${{ matrix.result_path }}
 
     - name: 'Release ZIP'
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-          files: 'out/pytankbattle-windows-x86_64.zip'
-
-  macosx-build:
-    name: macOSX Build
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.12
-
-    - run: pip install --upgrade --pre --extra-index-url https://marcelotduarte.github.io/packages/ setuptools_git_versioning cx_Freeze
-    - run: pip install -r requirements.txt
-    - run: cd src; python freeze.py build_exe
-
-    - name: Archive Zip
-      uses: thedoctor0/zip-release@main
-      with:
-        type: 'zip'
-        filename: 'pytankbattle-macosx-x86_64.zip'
-        directory: 'out/'
-        path: 'src/build/exe.macosx-10.9-universal2-3.12/*'
-
-    - name: 'Release ZIP'
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-          files: 'out/pytankbattle-macosx-x86_64.zip'
-
-  linux-build:
-    name: Linux Build
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.12
-
-    - run: pip install --upgrade --pre --extra-index-url https://marcelotduarte.github.io/packages/ setuptools_git_versioning cx_Freeze
-    - run: pip install -r requirements.txt
-    - run: cd src; python freeze.py build_exe
-
-    - name: Archive Zip
-      uses: thedoctor0/zip-release@main
-      with:
-        type: 'zip'
-        filename: 'pytankbattle-linux-x86_64.zip'
-        directory: 'out/'
-        path: 'src/build/exe.linux-x86_64-3.12/*'
-
-    - name: 'Release ZIP'
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-          files: 'out/pytankbattle-linux-x86_64.zip'
+          files: out/${{ matrix.result_name }}.zip
