--- a/.github/workflows/build_n_release.yml
+++ b/.github/workflows/build_n_release.yml
@@ -20,13 +20,13 @@ jobs:
         include:
           - os: 'windows-latest'
             result_name: pytankbattle-windows-x86_64
-            result_path: src/build/exe.win-amd64-3.12/*
+            result_path: src/build/exe.win-amd64-3.12
           - os: 'ubuntu-latest'
             result_name: pytankbattle-linux-x86_64
-            result_path: src/build/exe.linux-x86_64-3.12/*
+            result_path: src/build/exe.linux-x86_64-3.12
           - os: 'macos-latest'
             result_name: pytankbattle-macosx-x86_64
-            result_path: src/build/exe.macosx-10.9-universal2-3.12/*
+            result_path: src/build/exe.macosx-10.9-universal2-3.12
 
     steps:
     - uses: actions/checkout@v4
@@ -45,11 +45,11 @@ jobs:
       with:
         type: 'zip'
         filename: ${{ matrix.result_name }}.zip
-        directory: 'out/'
-        path: ${{ matrix.result_path }}
+        directory: ${{ matrix.result_path }}
+        path: '*'
 
     - name: 'Release ZIP'
       uses: softprops/action-gh-release@v1
       if: startsWith(github.ref, 'refs/tags/')
       with:
-          files: out/${{ matrix.result_name }}.zip
+          files: ${{ matrix.result_path }}/${{ matrix.result_name }}.zip
